# RealTimeSystems

./: README.md
Multithread_RW/: CMakeLists.txt  README.md  main.cpp
Multithread_RW/includes/: classes.hpp  constantes.hpp  funcoes.hpp
Multithread_RW/txtFiles/: adjetivos.txt  citacoes.txt  escritores.txt  nomes.txt
Other/: electric_motor.cpp
Threads/: Dockerfile  l1.cpp  l2.cpp  l3.cpp  l4.cpp  l5.cpp  l6.cpp  trabalho.cpp
TimeManipulation/: 0current_time.cpp  1current_time.cpp  1periodic.cpp  2periodic.cpp  3periodic.cpp  3specific_time.cpp  4calculate_thread_time.cpp  5calculate_thread_time.cpp  electric_motors.cpp
